# SFML_pong

./: .gitignore  CMakeLists.txt
src/include/: Ball.h
src/source/: Ball.cpp  Bat.cpp  main.cpp
